force-app/main/default/objects/Expense__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount(old)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>