force-app/main/default/objects/Expense__c/fields/Approval_Manager__c.field-meta.xml
<CustomField>
    <fullName>Approval_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses (Approval Manager)</relationshipLabel>
    <relationshipName>ExpensesApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>