force-app/main/default/objects/Expense__c/fields/Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Audit_Notes__c</fullName>
    <label>Audit Notes</label>
    <type>TextArea</type>
</CustomField>