force-app/main/default/objects/Expense__c/fields/Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Currency__c</fullName>
    <label>Billing Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>