force-app/main/default/objects/Expense__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <formula>Resource__r.EMS_RM_Employee_Id__c</formula>
    <label>Employee ID</label>
    <type>Text</type>
</CustomField>