force-app/main/default/objects/Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airfare</fullName>
            </value>
            <value>
                <fullName>Business Meals</fullName>
            </value>
            <value>
                <fullName>Car Rental</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Employee Relations</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>General and Admin Expenses</fullName>
            </value>
            <value>
                <fullName>IT Equipment and Services</fullName>
            </value>
            <value>
                <fullName>Lodging (Room and Tax)</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Office Supplies and Services</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Meals</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Postage and Shipping</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Taxi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>