force-app/main/default/objects/Expense__c/fields/is_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>is_Reimbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reimbursed ?</label>
    <type>Checkbox</type>
</CustomField>