force-app/main/default/objects/Expense__c/fields/Reimbursed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reimbursed_Date__c</fullName>
    <label>Reimbursed Date</label>
    <type>Date</type>
</CustomField>