force-app/main/default/objects/Expense__c/validationRules/No_Updates_Allowed_After_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Updates_Allowed_After_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
NOT( OR(ISCHANGED( Reimbursed_Date__c ), ISCHANGED( is_Reimbursed__c ))),
ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;)
)</errorConditionFormula>
    <errorMessage>No updates are allowed on Approved Expenses. Please contact the admin.</errorMessage>
</ValidationRule>