force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Manager__c</columns>
    <columns>Bill_Date__c</columns>
    <columns>Expense_Type__c</columns>
    <columns>is_Reimbursed__c</columns>
    <columns>Reimbursed_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Resource__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>